Category and Location Handlers now work.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,14 +12,18 @@ table { border-collapse: collapse; border-spacing: 0; }
 /*TEXT STYLES*/
 body { font-family: Georgia,"Times New Roman",Times,serif; line-height: 1.4em; }
 a { color: #81290D; cursor: pointer; outline: medium none; text-decoration: none; }
+h1 { font-size: 22px; text-transform: uppercase; color: #4D7238; }
 #fb-profile { font-size: 14px; text-align: right; }
-#brag-form h3, #sidebar h3 { color: #81290D; font-size: 16px; font-weight: normal; padding-bottom: 4px; }
+#brag-form h2 { color: #81290D; font-size: 16px; font-weight: normal; padding-bottom: 4px; }
 #tag-list label { white-space:nowrap; }
-#mainbar .user-profile h2 { color: #81290D; font-size: 20px; font-weight: normal; text-transform: uppercase; }
-#brag-list .brag-vote a, .user-beans p { font-size: 12px; }
-#brag-list .brag-entry p, #sidebar p, #sidebar ul { font-size: 16px; padding-top: 8px; color: #636363; }
-#brag-list .brag-entry .brag-meta p, #sidebar p { text-align: left; font-size: 14px; }
+#mainbar .user-profile h1 { color: #81290D; font-size: 20px; font-weight: normal; text-transform: uppercase; }
+#mainbar .profile-name h2 { color: #81290D; font-size: 16px; font-weight: normal; text-transform: uppercase; }
+.brag-vote a, .user-beans p { font-size: 12px; }
+.brag-entry p, #mainbar p, #sidebar p, #sidebar ul { font-size: 16px; padding-top: 8px; color: #636363; }
+.brag-entry .brag-meta p, #sidebar p { text-align: left; font-size: 14px; }
 .user-beans p { text-align: center; line-height: 1em; color: #636363; }
+#start h2 { color: #81290D; font-size: 18px; font-weight: normal; padding-bottom: 4px; }
+.leader-box-header h2 { color: #fff; font-size: 18px; font-weight: normal; padding: 0 0 4px 12px; }
 #footer { font-size: 12px; color: #636363; }
 .vote-button { color: #81290D;  }
 
@@ -48,10 +52,15 @@ body { background-color: #eee9dc; }
 .user-profile { height: 60px; }
 .user-profile .profile-image { float: left; }
 .user-profile .profile-image img { border: solid #c3c7bd 2px; }
-.user-profile .profile-name { margin-left: 8px; float: left; }
+.user-profile .profile-name, .user-profile-tiny .profile-name { margin-left: 8px; float: left; }
 .user-profile .user-beans { float: left; margin-left: 12px; }
 .user-profile .user-bean-count { float: left; font-size: 20px; -moz-border-radius: 20px; border: solid 0px #688b54; background-color: #688b54; color: white; margin: -4px 6px 0 10px; padding: 4px 8px 8px 8px;  }
 .user-profile .user-bean-text { float: right; }
+
+.brag-user-profile { }
+.brag-user-profile .profile-image { float: left; }
+.brag-user-profile .profile-image img { width: 35px; height: 35px; border: solid #c3c7bd 2px; }
+.brag-user-profile .profile-name { float: left; margin: 0 0 0 12px; }
 
 #brag-form { margin: 6px 0 18px 0; float: left; clear: both; }
 
@@ -61,8 +70,11 @@ body { background-color: #eee9dc; }
 #submit-button { float: right; }
 
 #brag-list { margin: 20px 0; clear:both; overflow: hidden; }
-#brag-list .brag-entry { float: left; overflow: hidden; padding: 10px 0; width: 100%; background: url("../images/entry-separator.png") no-repeat scroll left top transparent; }
-#brag-list .brag-vote { text-align: center; float: right; }
+.brag-wrap { clear: both; }
+.brag-wrap .brag-entry { background: url("../images/entry-separator.png") no-repeat scroll left bottom transparent; padding: 0 0 10px 0; margin-bottom: 10px; }
+.brag-entry { float: left; overflow: hidden; padding: 10px 0; width: 100%; background: url("../images/entry-separator.png") no-repeat scroll left top transparent; }
+
+.brag-vote { text-align: center; float: right; }
 .vote-button { background-color: transparent; text-decoration: underline; border: none; cursor: pointer; padding: 0; }
 
 .vote-count { font-size: 20px; -moz-border-radius: 20px; border: solid 0px #688b54; background-color: #688b54; color: white; margin-top: 4px; padding: 4px 8px 8px 8px; }
@@ -72,8 +84,12 @@ body { background-color: #eee9dc; }
 
 /*SIDEBAR*/
 #sidebar { width: 260px; float: left; }
+.side-block { margin-bottom: 20px; clear: both; }
+.leader-box { border: 2px solid #5e7e4c; }
+.leader-box-header { background: none repeat scroll 0 0 #5e7e4c; }
+.leader-box-content { padding: 2px 12px 6px; }
 #start ul { list-style-image: url("../images/green-bullet.png"); margin-left: 20px;  }
-#start-button { width: 88px; height: 32px; float: right; margin-top: 10px; }
+#start-button { width: 88px; height: 32px; margin: 10px 0 0 172px; clear: both; }
 
 /*FOOTER*/
 #footer {  }
