--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,17 @@
       <div id="footer">
       	<div id="content-bottom"></div>   
         <div id="footer-content">
+					<div id="bottom-nav">
+						<ul>
+							<li><a href="/page/about">About</a></li>
+							<li>|</li>
+							<li><a href="/page/rewards">Rewards</a></li>
+							<li>|</li>
+							<li><a href="/page/contact">Contact</a></li>							
+							<li>|</li>
+							<li><a href="/page/terms">Terms</a></li>							
+						</ul>
+					</div>
         	<div id="credit"><a href="http://code.google.com/appengine/"><img src="/static/images/appengine-silver-120x30.gif"/></a></div>
         </div>       
       </div>
