--- a/templates/base_user_profile.html
+++ b/templates/base_user_profile.html
@@ -90,8 +90,9 @@
 			<div id="start">
       	<h2>Go Green, Earn Beans!</h2>
         <ul>
-        	<li>Get ranked on your Green accomplishments.</li>
-          <li>Earn beans for you and your community and win prizes.</li>
+        	<li><strong>Get ranked</strong> on your Green accomplishments.</li>
+          <li><strong>Vote</strong> on your friends accomplishments.</li>
+          <li>Earn beans for you and your community and <strong>win prizes</strong>.</li>
         </ul>
         <div id="start-button">
 					<a href="/signup"><img src="/static/images/get-beans-button.png"/></a>
