Misc bug fixes.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,7 +12,8 @@ table { border-collapse: collapse; border-spacing: 0; }
 /*TEXT STYLES*/
 body { font-family: Georgia,"Times New Roman",Times,serif; line-height: 1.4em; }
 a { color: #81290D; cursor: pointer; outline: medium none; text-decoration: none; }
-h1 { font-size: 22px; text-transform: uppercase; color: #4D7238; }
+h1 { font-size: 22px; text-transform: uppercase; color: #4D7238; padding-bottom: 16px; }
+h1#error { font-size: 40px; color: red; }
 #fb-profile { font-size: 14px; text-align: right; }
 #brag-form h2 { color: #81290D; font-size: 16px; font-weight: normal; padding-bottom: 4px; }
 #tag-list label { white-space:nowrap; }
@@ -35,13 +36,21 @@ body { background-color: #eee9dc; }
 
 /*HEADER*/
 #header { width: 100%; }
-#top { height: 80px; }
-#logo { background-image: url("../images/logo.png"); width: 280px; height: 76px; margin-left: 20px; float: left; }
+#top { height: 76px; }
+#top-left { float: left; }
+#top-right { float: right; }
+#logo-wrap { }
+#logo { width: 280px; height: 76px; margin-left: 20px; float: left; }
 #fb-login { margin: 4px 26px 4px 0px; width: 400px; float: right; }
 #fb-button { float: right; }
-#fb-profile { float: right; padding: 4px 16px 0 0; }
+#fb-profile { float: right; padding: 2px 16px 0 0; }
 #fb-profile img { border: 3px solid #222; }
+#fb-profile p { padding: 0; }
+#top-nav-wrap { }
+#top-nav { float: right; margin: 10px 10px 0 0; }
+#top-nav li { display: inline; color: #636363; font-size: 16px; padding-right: 20px; }
 #content-top { background: url("../images/content-top.png") no-repeat scroll center top transparent; width: 720px; height: 40px; }
+
 
 /*MAIN*/
 #content { }
