--- a/templates/base.html
+++ b/templates/base.html
@@ -57,17 +57,33 @@
     	<!-- HEADER --> 
       <div id="header">
 				<div id="top">
-					<div id="logo"></div>
-					<div id="fb-login">
-						<div id="fb-button">
-							<fb:login-button autologoutlink="true" perms="publish_checkins,publish_stream"></fb:login-button>
-						</div>
-			    	{% if current_user %}
-			      <div id="fb-profile">
-							<p>Hello, <a href="/user/{{current_user.fb_id}}">{{current_user.name}}</a></p>
-						</div>
-			    	{% endif %}
+					<div id="top-left">
+						<div id="logo"><a href="/"><img src="/static/images/logo.png"/></a></div>
 					</div>
+					<div id="top-right">
+						<div id="login-wrap">
+							<div id="fb-login">
+								<div id="fb-button">
+									<fb:login-button autologoutlink="true" perms="publish_checkins,publish_stream"></fb:login-button>
+								</div>
+				    		{% if current_user %}
+				      	<div id="fb-profile">
+									<p>Hello, <a href="/user/{{current_user.fb_id}}">{{current_user.name}}</a></p>
+								</div>
+				    		{% endif %}
+							</div><!-- /fb-login -->
+					  </div><!-- /login-wrap -->
+						<!--
+						<div id="top-nav-wrap">
+							<div id="top-nav">
+								<ul>
+									<li><a href="/top/users">Top Users</a></li>
+									<li><a href="/top/locations">Top Locations</a></li>
+									<li><a href="/top/categories">Top Categories</a></li>								
+								</ul>
+							</div>		
+						</div> -->
+					</div>	
 				</div>	
         <div id="content-top"></div>
       </div>
@@ -80,6 +96,69 @@
 						{% endblock  %}
 						
 						{% block sidebar%}
+					  <!-- SIDEBAR --> 
+					  <div id="sidebar">
+							{% ifnotequal current_user.fb_id profile_user.fb_id %}
+					  	<div class="side-block">
+								<div id="start">
+					      	<h2>Go Green, Earn Beans!</h2>
+					        <ul>
+					        	<li>Get ranked on your Green accomplishments.</li>
+					          <li>Earn beans for you and your community and win prizes.</li>
+					        </ul>
+					        <div id="start-button">
+										<a href="/signup"><img src="/static/images/get-beans-button.png"/></a>
+									</div>
+					      </div><!-- /start -->
+					    </div><!-- /side-block -->
+							{% endifnotequal %}
+
+					  	<div class="side-block">
+					    	<div id="leaders" class="leader-box">
+									<div class="leader-box-header">
+					      		<h2>Greenbean Leaders</h2>
+					        </div>
+									<div class="leader-box-content">
+										<ul>
+										{% for x in leaders %}
+					        		<li>{{x.beans}} -- <a href="/user/{{x.user.fb_id}}">{{x.user.name}}</a></li>
+										{% endfor %}
+					      		</ul>
+									</div>
+					      </div><!-- /leaders -->
+					    </div><!-- /side-block -->
+
+					  	<div class="side-block">
+					    	<div id="cat-leaders" class="leader-box">
+									<div class="leader-box-header">
+					      		<h2>Top Categories</h2>
+									</div>
+									<div class="leader-box-content">
+					        	<ul>
+										{% for c in category_leaders %}
+					        		<li>{{c.beans}} -- <a href="/category/{{c.name}}">{{c.name}}</a></li>
+										{% endfor %}
+					      		</ul>
+									</div>
+					      </div><!-- /cat-leaders -->
+					    </div><!-- /side-block -->
+
+					  	<div class="side-block">
+					    	<div id="loc-leaders" class="leader-box">
+									<div class="leader-box-header">
+					      		<h2>Top Locations</h2>
+									</div>
+									<div class="leader-box-content">
+					        	<ul>
+										{% for l in location_leaders %}
+					         		<li>{{l.beans}} -- <a href="/location/{{l.fb_id}}">{{l.fb_name}}</a></li>
+					 					{% endfor %}
+					        	</ul>
+									</div>	
+					      </div><!-- /loc-leaders -->
+					    </div><!-- /side-block -->
+
+					  </div><!-- /sidebar -->						
 						{% endblock %}						
 
           </div><!-- /bar-wrapper -->
