Added home page and some bug fixes.

--- a/templates/base.html
+++ b/templates/base.html
@@ -93,6 +93,66 @@
         <div id="content-middle">
         	<div id="bar-wrapper">
 						{% block main %}
+						<div id="mainbar">
+							{% block top-content %}
+					    <!-- brag-list: container for list of Brags. --> 
+							<h1>Recent Green Updates</h1>
+							<p>Login with Facebook to earn and award greenbeans!  </p>
+					    {% endblock %}							
+							{% block brags %}
+				    	<div id="brag-list">
+				    		{% for brag in brags %}
+				  			<div class="brag-wrap">
+					  			<!-- user-profile: container for the user's avatar and name. -->
+					    		<div class="brag-user-profile">
+					    			<div class="profile-image">
+					      			<a href="{{ brag.user.fb_profile_url }}"><img src="http://graph.facebook.com/{{brag.user.fb_id }}/picture?type=square"/></a></p>
+					      		</div>
+					      		<div class="profile-name">
+					      			<h2>
+												<span class="name"><a href="/user/{{brag.user.fb_id}}">{{ brag.user.name|escape }}</a></span>
+												<!--<span class="beans-count"> ({{beans}})</span>-->
+											</h2>
+					      		</div>
+				    			</div>
+				    			<!-- brag-entry: container for a single Brag -->
+				      		<div class="brag-entry">
+										<div class="brag-vote">
+											<form class="vote-form" action="">
+				       					<div id="{{brag.key}}" class="vote-count">{{brag.beans}}</div>
+										  	{% if current_user.fb_id %}
+											  	{% if not current_user.fb_id|in_list:brag.voter_keys %}
+											  	<input class="vote-button" type="submit" class="text-button" value="vote+"/>
+											  	<input type="hidden" class="brag" name="brag" value="{{brag.key}}">
+											  	<input type="hidden" class="votee" name="votee" value="{{brag.user.fb_id}}">
+											  	<input type="hidden" class="voter" name="voter" value="{{current_user.fb_id}}">
+											  	{% endif %}
+												{% endif %}          	
+				       				</form>
+										</div>
+				       			<div class="brag-message">
+				       				<p>{{ brag.message|escape }}</p>
+				       			</div>          
+				       			<div class="brag-meta">
+				       				<p>{{brag.created|timesince}} ago 
+												{% if brag.fb_location_name %}
+												in <a href="/location/{{brag.fb_location_id}}">{{ brag.fb_location_name }}</a> 
+												{% endif %}
+				         				{% for c in brag.categories%}
+				           			<a href="/category/{{c}}">#{{c}} </a>
+				           			{%endfor%}
+				         			</p>
+				       			</div>          
+				       			<!--
+										<div class="brag-comments">...
+										</div>
+										--> 
+				     			</div><!-- /brag-entry -->
+								</div><!-- /brag-wrap -->
+				    		{% endfor %}
+				    	</div><!-- /brag-list -->   
+				  		{% endblock %}
+						</div><!-- /mainbar -->				
 						{% endblock  %}
 						
 						{% block sidebar%}
@@ -103,11 +163,12 @@
 								<div id="start">
 					      	<h2>Go Green, Earn Beans!</h2>
 					        <ul>
-					        	<li>Get ranked on your Green accomplishments.</li>
-					          <li>Earn beans for you and your community and win prizes.</li>
+					        	<li><strong>Get ranked</strong> on your Green accomplishments.</li>
+					        	<li><strong>Reward</strong> your friends' who are going green.</li>					
+					          <li>Earn beans for you and your community and <strong>win prizes</strong>.</li>
 					        </ul>
 					        <div id="start-button">
-										<a href="/signup"><img src="/static/images/get-beans-button.png"/></a>
+										<a href="/page/signup"><img src="/static/images/get-beans-button.png"/></a>
 									</div>
 					      </div><!-- /start -->
 					    </div><!-- /side-block -->
