--- a/templates/base_about.html
+++ b/templates/base_about.html
@@ -7,7 +7,10 @@
 	<div id="fullbar">
 		<h1>About Us</h1>
 		<p>This is who we are.</p>
-		
                          
   </div><!-- /fullbar -->
 	{% endblock %}	
+
+	{% block sidebar %}
+	<!-- no sidebar -->
+	{% endblock %}
