--- a/templates/base_contact.html
+++ b/templates/base_contact.html
@@ -7,7 +7,9 @@
 	<div id="fullbar">
 		<h1>Contact Us</h1>
 		<p>This is how to get a hold of us.</p>
-		
-                         
   </div><!-- /fullbar -->
 	{% endblock %}	
+
+	{% block sidebar %}
+	<!-- no sidebar -->
+	{% endblock %}
