--- a/templates/base_terms.html
+++ b/templates/base_terms.html
@@ -11,3 +11,7 @@
                          
   </div><!-- /fullbar -->
 	{% endblock %}	
+
+	{% block sidebar %}
+	<!-- no sidebar -->
+	{% endblock %}	
