--- a/templates/base_signup.html
+++ b/templates/base_signup.html
@@ -18,3 +18,6 @@
                          
   </div><!-- /fullbar -->
 	{% endblock %}	
+	{% block sidebar %}
+	<!-- no sidebar -->
+	{% endblock %}	
